feat: add put consents/{ID} handler (#38)
* feat: add put consents/{ID} handler

* chore: update api inteface schema

* chore: initialize files

* chore: add tests

* chore: update schema

* chore: fix linting
